--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^3.1.2",
     "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "css-loader": "^2.1.1"
   }
 }
